--- a/packages/flutx_logger/pubspec.yaml
+++ b/packages/flutx_logger/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutx
+name: flutx_logger
 description: A new Flutter package project.
 version: 0.0.1
 author:
@@ -8,5 +8,5 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  meta: ^1.1.6
-  equatable: ^0.6.1
+  flutx:
+    path: ../flutx
